--- a/frontend/src/pages/WhatIsHealthEquity/WhatIsHealthEquityPage.module.scss
+++ b/frontend/src/pages/WhatIsHealthEquity/WhatIsHealthEquityPage.module.scss
@@ -124,7 +124,9 @@
     }
 
     .DefinitionSourceSpan {
-      color: $alt-grey;
+      color: $alt-black; // $alt-grey fails a11y contrast
+      font-weight: 200;
+      font-size: smaller;
     }
   }
 }
